# pandas-airtable

./: .coverage  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  claude.md  pyproject.toml  technical_requirements.md
.claude/agents/: pedantic-product-owner.md  python-standards-judge.md  research-advisor.md  test-coverage-validator.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/pandas_airtable/: accessor.py  batch.py  exceptions.py  reader.py  retry.py  schema.py  utils.py
tests/: test_accessor.py  test_batch.py  test_reader.py  test_retry.py  test_schema.py
tests/integration/: conftest.py  test_edge_cases_integration.py  test_rate_limit_integration.py  test_read_integration.py  test_schema_integration.py  test_write_integration.py
